force-app/main/default/objects/Appointment__c/fields/Dentist_Name__c.field-meta.xml
<CustomField>
    <fullName>Dentist_Name__c</fullName>
    <label>Dentist Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>