force-app/main/default/objects/Appointment__c/validationRules/ValidateAppointmentDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateAppointmentDate</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Appointment_Date__c )</errorConditionFormula>
    <errorMessage>Appointment Date is required.</errorMessage>
</ValidationRule>