force-app/main/default/objects/Appointment__c/validationRules/ValidatePatientName.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidatePatientName</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Patient_Name__c )</errorConditionFormula>
    <errorMessage>Patient Name is required.</errorMessage>
</ValidationRule>