force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Patient_Name__c</columns>
    <columns>Dentist_Name__c</columns>
    <columns>Appointment_Date__c</columns>
    <columns>Appointment_Time__c</columns>
    <columns>Notes__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>