force-app/main/default/objects/Appointment__c/listViews/Filter_by_Dentist_Name.listView-meta.xml
<ListView>
    <fullName>Filter_by_Dentist_Name</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Filter by Dentist Name</label>
</ListView>